SVGLangParser.java
// Generated from SVGLang.g4 by ANTLR 4.4

 	import java.awt.Color;
 	import util.SVGparser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SVGLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, INT=5, WS=6, SEMI=7, TEXT=8, CIRCLE=9, 
		RECTANGLE=10, LINE=11, POLYGON=12, RED=13, BLUE=14, YELLOW=15, GREEN=16, 
		BLACK=17, WHITE=18;
	public static final String[] tokenNames = {
		"<INVALID>", "'RGB('", "')'", "','", "'('", "INT", "WS", "';'", "'text'", 
		"'circle'", "'rectangle'", "'line'", "'polygon'", "'red'", "'blue'", "'yellow'", 
		"'green'", "'black'", "'white'"
	};
	public static final int
		RULE_start = 0, RULE_command = 1, RULE_shape = 2, RULE_rect = 3, RULE_circle = 4, 
		RULE_line = 5, RULE_color = 6, RULE_location = 7, RULE_start_point = 8, 
		RULE_end_point = 9;
	public static final String[] ruleNames = {
		"start", "command", "shape", "rect", "circle", "line", "color", "location", 
		"start_point", "end_point"
	};

	@Override
	public String getGrammarFileName() { return "SVGLang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		//rect and circle
		int width = 0;
		int height = 0;
		int radius = 0;
		int x = 0;
		int y = 0;
		
		//line
		int x1 = 0;
		int y1 = 0;
		int x2 = 0;
		int y2 = 0;
		
		//rgb
		int red = 0;
		int green = 0;
		int blue = 0;
		
		Color c = new Color(red, green, blue);
		SVGparser svg = new SVGparser();


	public SVGLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public List<TerminalNode> SEMI() { return getTokens(SVGLangParser.SEMI); }
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public TerminalNode SEMI(int i) {
			return getToken(SVGLangParser.SEMI, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CIRCLE) | (1L << RECTANGLE) | (1L << LINE))) != 0)) {
				{
				{
				setState(20); command();
				setState(21); match(SEMI);
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			svg.buildFile();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public ShapeContext shape() {
			return getRuleContext(ShapeContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		try {
			setState(32);
			switch (_input.LA(1)) {
			case CIRCLE:
			case RECTANGLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(30); shape();
				}
				break;
			case LINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(31); line();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShapeContext extends ParserRuleContext {
		public CircleContext circle() {
			return getRuleContext(CircleContext.class,0);
		}
		public RectContext rect() {
			return getRuleContext(RectContext.class,0);
		}
		public ShapeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterShape(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitShape(this);
		}
	}

	public final ShapeContext shape() throws RecognitionException {
		ShapeContext _localctx = new ShapeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_shape);
		try {
			setState(36);
			switch (_input.LA(1)) {
			case RECTANGLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(34); rect();
				}
				break;
			case CIRCLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(35); circle();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RectContext extends ParserRuleContext {
		public Token INT;
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(SVGLangParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SVGLangParser.INT, i);
		}
		public TerminalNode RECTANGLE() { return getToken(SVGLangParser.RECTANGLE, 0); }
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public RectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterRect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitRect(this);
		}
	}

	public final RectContext rect() throws RecognitionException {
		RectContext _localctx = new RectContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); match(RECTANGLE);
			setState(39); ((RectContext)_localctx).INT = match(INT);
			width = (((RectContext)_localctx).INT!=null?Integer.valueOf(((RectContext)_localctx).INT.getText()):0);
			setState(41); ((RectContext)_localctx).INT = match(INT);
			height = (((RectContext)_localctx).INT!=null?Integer.valueOf(((RectContext)_localctx).INT.getText()):0);
			setState(43); location();
			setState(44); color();
			svg.newRectangle(width,height,x,y,c);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CircleContext extends ParserRuleContext {
		public Token INT;
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public TerminalNode INT() { return getToken(SVGLangParser.INT, 0); }
		public TerminalNode CIRCLE() { return getToken(SVGLangParser.CIRCLE, 0); }
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public CircleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterCircle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitCircle(this);
		}
	}

	public final CircleContext circle() throws RecognitionException {
		CircleContext _localctx = new CircleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_circle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); match(CIRCLE);
			setState(48); ((CircleContext)_localctx).INT = match(INT);
			radius = (((CircleContext)_localctx).INT!=null?Integer.valueOf(((CircleContext)_localctx).INT.getText()):0);
			setState(50); location();
			setState(51); color();
			svg.newCircle(radius,x,y,c);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public Start_pointContext start_point() {
			return getRuleContext(Start_pointContext.class,0);
		}
		public End_pointContext end_point() {
			return getRuleContext(End_pointContext.class,0);
		}
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public TerminalNode LINE() { return getToken(SVGLangParser.LINE, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); match(LINE);
			setState(55); start_point();
			setState(56); end_point();
			setState(57); color();
			svg.newLine(x1,y1,x2,y2,c);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColorContext extends ParserRuleContext {
		public Token INT;
		public TerminalNode YELLOW() { return getToken(SVGLangParser.YELLOW, 0); }
		public List<TerminalNode> INT() { return getTokens(SVGLangParser.INT); }
		public TerminalNode GREEN() { return getToken(SVGLangParser.GREEN, 0); }
		public TerminalNode BLUE() { return getToken(SVGLangParser.BLUE, 0); }
		public TerminalNode BLACK() { return getToken(SVGLangParser.BLACK, 0); }
		public TerminalNode RED() { return getToken(SVGLangParser.RED, 0); }
		public TerminalNode WHITE() { return getToken(SVGLangParser.WHITE, 0); }
		public TerminalNode INT(int i) {
			return getToken(SVGLangParser.INT, i);
		}
		public ColorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_color; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterColor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitColor(this);
		}
	}

	public final ColorContext color() throws RecognitionException {
		ColorContext _localctx = new ColorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_color);
		try {
			setState(83);
			switch (_input.LA(1)) {
			case RED:
				enterOuterAlt(_localctx, 1);
				{
				setState(60); match(RED);
				c = Color.red;
				}
				break;
			case BLUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(62); match(BLUE);
				c = Color.blue;
				}
				break;
			case YELLOW:
				enterOuterAlt(_localctx, 3);
				{
				setState(64); match(YELLOW);
				c = Color.yellow;
				}
				break;
			case GREEN:
				enterOuterAlt(_localctx, 4);
				{
				setState(66); match(GREEN);
				c = Color.green;
				}
				break;
			case BLACK:
				enterOuterAlt(_localctx, 5);
				{
				setState(68); match(BLACK);
				c = Color.black;
				}
				break;
			case WHITE:
				enterOuterAlt(_localctx, 6);
				{
				setState(70); match(WHITE);
				c = Color.white;
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 7);
				{
				setState(72); match(T__3);
				setState(73); ((ColorContext)_localctx).INT = match(INT);
				red = (((ColorContext)_localctx).INT!=null?Integer.valueOf(((ColorContext)_localctx).INT.getText()):0);
				setState(75); match(T__1);
				setState(76); ((ColorContext)_localctx).INT = match(INT);
				green = (((ColorContext)_localctx).INT!=null?Integer.valueOf(((ColorContext)_localctx).INT.getText()):0);
				setState(78); match(T__1);
				setState(79); ((ColorContext)_localctx).INT = match(INT);
				blue = (((ColorContext)_localctx).INT!=null?Integer.valueOf(((ColorContext)_localctx).INT.getText()):0);
				setState(81); match(T__2);
				c = new Color(red, green, blue);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationContext extends ParserRuleContext {
		public Token INT;
		public List<TerminalNode> INT() { return getTokens(SVGLangParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SVGLangParser.INT, i);
		}
		public LocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_location; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterLocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitLocation(this);
		}
	}

	public final LocationContext location() throws RecognitionException {
		LocationContext _localctx = new LocationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_location);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); match(T__0);
			setState(86); ((LocationContext)_localctx).INT = match(INT);
			x = (((LocationContext)_localctx).INT!=null?Integer.valueOf(((LocationContext)_localctx).INT.getText()):0);
			setState(88); match(T__1);
			setState(89); ((LocationContext)_localctx).INT = match(INT);
			y = (((LocationContext)_localctx).INT!=null?Integer.valueOf(((LocationContext)_localctx).INT.getText()):0);
			setState(91); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_pointContext extends ParserRuleContext {
		public Token INT;
		public List<TerminalNode> INT() { return getTokens(SVGLangParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SVGLangParser.INT, i);
		}
		public Start_pointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_point; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterStart_point(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitStart_point(this);
		}
	}

	public final Start_pointContext start_point() throws RecognitionException {
		Start_pointContext _localctx = new Start_pointContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_start_point);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(T__0);
			setState(94); ((Start_pointContext)_localctx).INT = match(INT);
			x1 = (((Start_pointContext)_localctx).INT!=null?Integer.valueOf(((Start_pointContext)_localctx).INT.getText()):0);
			setState(96); match(T__1);
			setState(97); ((Start_pointContext)_localctx).INT = match(INT);
			y1 = (((Start_pointContext)_localctx).INT!=null?Integer.valueOf(((Start_pointContext)_localctx).INT.getText()):0);
			setState(99); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class End_pointContext extends ParserRuleContext {
		public Token INT;
		public List<TerminalNode> INT() { return getTokens(SVGLangParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(SVGLangParser.INT, i);
		}
		public End_pointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end_point; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).enterEnd_point(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SVGLangListener ) ((SVGLangListener)listener).exitEnd_point(this);
		}
	}

	public final End_pointContext end_point() throws RecognitionException {
		End_pointContext _localctx = new End_pointContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_end_point);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(T__0);
			setState(102); ((End_pointContext)_localctx).INT = match(INT);
			x2 = (((End_pointContext)_localctx).INT!=null?Integer.valueOf(((End_pointContext)_localctx).INT.getText()):0);
			setState(104); match(T__1);
			setState(105); ((End_pointContext)_localctx).INT = match(INT);
			y2 = (((End_pointContext)_localctx).INT!=null?Integer.valueOf(((End_pointContext)_localctx).INT.getText()):0);
			setState(107); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}